Fix broken selection, fix stuttering when (de)selecting all cards, alarm z-index set to overlay everything else, account management buttons moved to the right part of navbar

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,6 +9,9 @@
 .card-header {
   border: 0px;
 }
+.alert {
+  z-index: 9999 !important;
+}
 
 /*HEADER*/
 .navbar-brand {
